--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="col">
         <h1 style="font-family: chomsky;">Welcome!</h1>
-        <p class="lead">Today's newscast is lead by our anchors Harper and Prabhav. We have a soft news story, and exciting interview, and plenty more to discuss on today's newscast.<br><br>Newest News gives only the newest news. Check out the <a href="debate.html" class="hover-underline-animation" style="color:#4287FF">Debate</a> page in order to see our Daily Debate!</p>
+        <p class="lead">Today's newscast is lead by our anchors Prabhav B. and Prabhav B. We have a soft news story, and exciting interview, and plenty more to discuss on today's newscast.<br><br>Newest News gives only the newest news. Check out the <a href="debate.html" class="hover-underline-animation" style="color:#4287FF">Debate</a> page in order to see our Daily Debate!</p>
         <img src="news.svg" width="400" class="img-fluid">
       </div>
     </div>
