--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
           <li class="nav-item">
             <a href="index.html" class="nav-link active hover-underline-animation"><i class="fa-regular fa-newspaper" style="color: --var(grey-600)"></i> News</a>
           </li>
-          <li class="nav-item hover-underline-animation">
-            <a href="debate.html" class="nav-link"><i class="fa-solid fa-user-group"></i> Debate</a>
-          </li>
         </ul>
       </div>
     </div>
@@ -53,7 +50,7 @@
       </div>
       <div class="col">
         <h1 style="font-family: chomsky;">Welcome!</h1>
-        <p class="lead">Today's newscast is lead by our anchors Prabhav B. and Prabhav B. We have a soft news story, and exciting interview, and plenty more to discuss on today's newscast.<br><br>Newest News gives only the newest news. Check out the <a href="debate.html" class="hover-underline-animation" style="color:#4287FF">Debate</a> page in order to see our Daily Debate!</p>
+        <p class="lead">Today's newscast is lead by our anchors Prabhav B. and Prabhav B. We have a soft news story, and exciting interview, and plenty more to discuss on today's newscast.<br><br>Newest News gives only the newest news.</p>
         <img src="news.svg" width="400" class="img-fluid">
       </div>
     </div>
