--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a href="index.html" class="nav-link active hover-underline-animation"><i class="fa-regular fa-newspaper" style="color: --var(grey-600)"></i> News</a>
+            <a href="/" class="nav-link active hover-underline-animation"><i class="fa-regular fa-newspaper" style="color: --var(grey-600)"></i> News</a>
           </li>
         </ul>
       </div>
@@ -46,7 +46,9 @@
   <section class="p-5">
     <div class="row">
       <div class="col">
-        
+        <video width="400" controls>
+            <source src="debate.mp4" type="video/mp4">
+        </video>
       </div>
       <div class="col">
         <h1 style="font-family: chomsky;">Welcome!</h1>
