--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
     <div class="row">
       <div class="col">
         <video width="400" controls>
-            <source src="debate.mp4" type="video/mp4">
+            <iframe width="600"
+                src="https://youtu.be/wSS_7krRyFo"
+            </iframe>
         </video>
       </div>
       <div class="col">
