--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="col">
         <video width="400" controls>
             <iframe width="600"
-                src="https://youtu.be/wSS_7krRyFo"
+                src="https://youtu.be/wSS_7krRyFo">
             </iframe>
         </video>
       </div>
