--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
     <div class="row">
       <div class="col">
         <video width="400" controls>
-            <iframe width="600"
-                src="https://youtu.be/wSS_7krRyFo">
-            </iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/wSS_7krRyFo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </video>
       </div>
       <div class="col">
