--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
       <div class="col">
         <h1 style="font-family: chomsky;">Welcome!</h1>
-        <p class="lead">Today's newscast is lead by our anchor Prabhav B. We have a soft news story, and exciting interview, and plenty more to discuss on today's newscast.<br><br>Newest News de;ivers only the newest news.</p>
+        <p class="lead">Today's newscast is lead by our anchor Prabhav B. We have a soft news story, and exciting interview, and plenty more to discuss on today's newscast.<br><br>Newest News delivers only the newest news.</p>
         <img src="news.svg" width="400" class="img-fluid">
       </div>
     </div>
